<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="8dp">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/productInputLayout" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu" android:layout_width="match_parent" android:layout_height="wrap_content">
            <AutoCompleteTextView android:id="@+id/productDropdown" android:layout_width="match_parent" android:layout_height="wrap_content" android:clickable="true" android:cursorVisible="false" android:focusable="false" android:hint="@string/label_choose_product" android:inputType="none" android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/quantityInputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"><com.google.android.material.textfield.TextInputEditText android:id="@+id/quantityInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1" android:hint="@string/label_quantity" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/unitInputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"><com.google.android.material.textfield.TextInputEditText android:id="@+id/unitInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="unit" android:hint="@string/label_unit" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"><com.google.android.material.textfield.TextInputEditText android:id="@+id/expiryInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/label_expiry_date" android:focusable="false" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"><com.google.android.material.textfield.TextInputEditText android:id="@+id/dateBoughtInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/label_date_bought" android:focusable="false" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"><AutoCompleteTextView android:id="@+id/storageInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:clickable="true" android:cursorVisible="false" android:focusable="false" android:hint="@string/label_storage_location" android:inputType="none" android:singleLine="true" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"><AutoCompleteTextView android:id="@+id/boughtFromInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:clickable="true" android:cursorVisible="false" android:focusable="false" android:hint="@string/label_bought_from" android:inputType="none" android:singleLine="true" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"><com.google.android.material.textfield.TextInputEditText android:id="@+id/nameOverrideInputEdit" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/label_display_name_override" /></com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>